--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Live Updates - CoronaVirus</title>
+
+      <meta name="description" content="Lives Updates Provides All Latest News , Current Affairs , COVID-19 , CoronaVirus News in One Plateform " />
+      <meta property="og:title" content="Lives Updates" />
+      <meta property="og:description" content="LivesUpdates -Plateform Where you can get All Latest Related to Current Affairs, COVID-19 , CoronaVirus News" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162441206-1"></script>
 
