--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
       <meta name="description" content="Lives Updates Provides All Latest News , Current Affairs , COVID-19 , CoronaVirus News in One Plateform " />
       <meta property="og:title" content="Lives Updates" />
-      <meta property="og:description" content="LivesUpdates -Plateform Where you can get All Latest Related to Current Affairs, COVID-19 , CoronaVirus News" />
+      <meta property="og:description" content="LivesUpdates -Plateform Where you can get All Latest News Related to Current Affairs, COVID-19 , CoronaVirus" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162441206-1"></script>
