Change Home Page Design

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,26 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-162441206-1');
+
+
+
+      $('.carousel.carousel-multi-item.v-2 .carousel-item').each(function(){
+  var next = $(this).next();
+  if (!next.length) {
+    next = $(this).siblings(':first');
+  }
+  next.children(':first-child').clone().appendTo($(this));
+
+  for (var i=0;i<4;i++) {
+    next=next.next();
+    if (!next.length) {
+      next=$(this).siblings(':first');
+    }
+    next.children(':first-child').clone().appendTo($(this));
+  }
+});
+
+      
     </script>
 
   </head>
